update export/import for menu
