# docs/swagger.json
@@ -288,6 +288,48 @@
                 }
             }
         },
+        "/admin/restaurants/menu/import": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "restaurants"
+                ],
+                "summary": "Импорт меню из Excel",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "Excel файл",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ImportResult"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/users": {
             "get": {
                 "security": [
@@ -1999,12 +2041,14 @@
             "enum": [
                 "orders",
                 "couriers",
-                "restaurants"
+                "restaurants",
+                "menu"
             ],
             "x-enum-varnames": [
                 "ExportTypeOrders",
                 "ExportTypeCouriers",
-                "ExportTypeRestaurants"
+                "ExportTypeRestaurants",
+                "ExportTypeMenu"
             ]
         },
         "domain.ImportResult": {
@@ -2044,9 +2088,6 @@
                 },
                 "is_available": {
                     "type": "boolean"
-                },
-                "name": {
-                    "type": "string"
                 },
                 "name_en": {
                     "type": "string"
@@ -2286,9 +2327,6 @@
                     "items": {
                         "$ref": "#/definitions/domain.MenuItem"
                     }
-                },
-                "name": {
-                    "type": "string"
                 },
                 "name_en": {
                     "type": "string"
